# yolov5_ros

./: .gitmodules  README.md  package.xml  setup.py
config/: coco128.yaml
yolov5_ros/: inference.py
