<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>yolov5_ros</name>
  <version>0.0.0</version>
  <description>Colconized YoloV5 package</description>
  <maintainer email="jimenojmm@gmail.com">juan</maintainer>
  <license>GPL3.0</license>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-pil</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
